validator_derive/tests/compile-fail/length/unknown_arg.stderr
error: proc-macro derive panicked
 --> $DIR/unknown_arg.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Invalid attribute #[validate] on field `s`: unknown argument `eq` for validator `length` (it only has `min`, `max`, `equal`)
